# mother

./: .dockerignore  .env.example  .gitignore  BUSINESS_PLAN.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mother.service  pyproject.toml  requirements.txt  test_plugin_system.py  verify_features.py  vms.yaml.example
.github/workflows/: ci.yml  deploy-website.yml  publish.yml  verify-install.yml
docs/dev/: IMPLEMENTATION_NOTES.md  IMPLEMENTATION_PLAN_SHIPPABLE.md  IMPLEMENTATION_PLAN_TOOLS_REGISTRY.md  LAUNCH_CHECKLIST.md  LAUNCH_READINESS_REPORT.md  PR_SUMMARY_ECOSYSTEM.md  PR_SUMMARY_TOR_TESTS.md  SHIP_ABILITY.md  verification.md
docs/ecosystem/: INTEGRATION_CONTRACT.md  OVERVIEW.md  tools-catalog.yaml
examples/: enterprise_demo.py
examples/tools/: example-policy.yaml  example-tool.yaml
mother/: __init__.py  credentials.py  main.py
mother/agent/: __init__.py  cognitive.py  core.py  errors.py  session.py
mother/api/: __init__.py  auth.py  ratelimit.py  routes.py  schemas.py
mother/audit/: __init__.py  logger.py  redaction.py
mother/auth/: __init__.py  keys.py  models.py  scopes.py
mother/cli/: __init__.py  doctor.py  email_cmd.py  init_cmd.py  keys.py  plugin.py  setup.py  status.py  tools_cmd.py
mother/config/: __init__.py  editions.py  email_accounts.py  settings.py
mother/llm/: __init__.py  base.py  factory.py  response.py
mother/llm/providers/: __init__.py  anthropic.py  gemini.py  mock.py  openai.py  zhipu.py
mother/memory/: __init__.py  embeddings.py  manager.py  store.py
mother/parsers/: __init__.py  output.py
mother/plugins/: __init__.py  base.py  exceptions.py  executor.py  loader.py  manifest.py  registry.py  sandbox.py  schema.py
mother/plugins/builtin/: __init__.py  acnjxn.py  contentcraft.py  filesystem.py  longcraft.py  mailcraft.py  mattercraft.py  pdf.py  shell.py  tor.py  tor_shell.py  web.py
mother/plugins/builtin/datacraft/: __init__.py  parsers.py  storage.py
mother/plugins/builtin/email/: __init__.py  imap_client.py  smtp_client.py
mother/plugins/builtin/german/: __init__.py  leads.py  taxlord.py
mother/plugins/builtin/google/: __init__.py  docs.py
mother/plugins/builtin/ssh/: __init__.py
mother/plugins/builtin/tasks/: __init__.py  storage.py
mother/policy/: __init__.py  conditions.py  engine.py  loader.py  models.py
mother/tools/: __init__.py  acnjxn.py  base.py  catalog.py  datacraft.py  exceptions.py  external_registry.py  gcp_draft.py  leads.py  mailcraft.py  pdf_merge.py  policy.py  registry.py  store.py  taxlord.py  tool_manifest.py  transmit.py
mother/utils/: __init__.py  ssh_client.py
scripts/: ecosystem_scan.py
tests/: test_agent_cognitive.py  test_agent_core.py  test_agent_errors.py  test_agent_session.py  test_api_auth.py  test_api_routes.py  test_api_schemas.py  test_audit.py  test_auth_keys.py  test_builtin_datacraft.py  test_builtin_email.py  test_builtin_filesystem.py  test_builtin_german.py  test_builtin_google.py  test_builtin_pdf.py  test_builtin_shell.py  test_builtin_tasks.py  test_builtin_tor.py  test_builtin_tor_shell.py  test_builtin_transmit.py  test_builtin_web.py  test_cli_setup.py  test_cli_tools.py  test_credentials.py  test_doctor.py  test_editions.py  test_email_accounts.py  test_executor.py  test_high_risk_plugins.py  test_init.py  test_init_cmd.py  test_llm_providers.py  test_memory_embeddings.py  test_memory_manager.py  test_memory_store.py  test_parsers_output.py  test_plugin_base.py  test_plugin_exceptions.py  test_plugin_filesystem.py  test_plugin_loader.py  (+20 more)
tests/fixtures/: mother-tool-highrisk.yaml  mother-tool-sample.yaml
verify/: policy.verification.yaml  verify_docker_install.sh  verify_repo_install.sh  verify_run_e2e.py
website/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/blog/: 2025-01-05-introducing-mother.md  2026-01-27-mother-autonomous-workflows.md  2026-01-27-test-contentcraft-integration.md  2026-02-20-revolutionizing-ai-coordination-with-mother-.md  2026-02-27-building-plugins-for-mother-ai-os-a-develope.md  2026-03-06-secure-ai-mastering-local-first-architecture.md  2026-03-09-contentcraft-test-post.md  2026-03-11-mastering-ai-oversight-audit-logging-and-policy-en.md  2026-03-13-mastering-ai-tool-coordination.md  2026-03-13-transforming-business-with-mother-ai-os.md  authors.yml
website/docs/: intro.md
website/docs/api/: python-sdk.md  rest-endpoints.md
website/docs/concepts/: how-it-works.md  plugin-system.md  security.md
website/docs/deployment/: docker.md  enterprise.md  self-hosted.md
website/docs/getting-started/: configuration.md  first-command.md  installation.md
website/docs/plugins/: built-in.md  creating-plugins.md  publishing.md
website/docs/tools/: cli-reference.md  creating-tools.md  overview.md
website/src/css/: custom.css
website/src/pages/: imprint.js  index.js  index.module.css  pricing.js  pricing.module.css  services.js  services.module.css
website/static/: CNAME  ai-data.json  knowledge-graph.json  robots.txt
website/static/ai/: index.html
website/static/datasets/: dataset-card.md  qa-pairs.jsonl  site-knowledge.jsonl
website/static/knowledge/: agent-orchestration.html  agent-os-for-developers.html  ai-agent-os.html  autonomous-ai.html  autonomous-task-execution.html  common-questions.html  multi-agent-orchestration.html
(+3 files in other folders)
