[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mother-ai-os"
version = "0.1.0"
description = "Mother - AI Agent OS with extensible plugin system for orchestrating CLI tools via natural language"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "David Sanker", email = "david@sanker.at" }
]
keywords = [
    "ai",
    "agent",
    "cli",
    "automation",
    "natural-language",
    "plugin",
    "anthropic",
    "claude",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/Mother-AI-OS/mother"
Documentation = "https://github.com/Mother-AI-OS/mother#readme"
Repository = "https://github.com/Mother-AI-OS/mother.git"
Issues = "https://github.com/Mother-AI-OS/mother/issues"

[project.scripts]
mother = "mother.cli:main"
mother-credentials = "mother.credentials:main"

[project.entry-points."mother.plugins"]
# Built-in plugins are discovered via entry points
# Third-party plugins register here: plugin_name = "package.module:PluginClass"

[tool.hatch.build.targets.wheel]
packages = ["mother"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
