[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mother-ai-os"
version = "0.1.0"
description = "Mother - AI Agent OS with extensible plugin system for orchestrating CLI tools via natural language"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "David Sanker", email = "david@sanker.at" }
]
keywords = [
    "ai",
    "agent",
    "cli",
    "automation",
    "natural-language",
    "plugin",
    "anthropic",
    "claude",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/Mother-AI-OS/mother"
Documentation = "https://github.com/Mother-AI-OS/mother#readme"
Repository = "https://github.com/Mother-AI-OS/mother.git"
Issues = "https://github.com/Mother-AI-OS/mother/issues"

[project.scripts]
mother = "mother.cli:main"
mother-credentials = "mother.credentials:main"

[project.entry-points."mother.plugins"]
# Built-in plugins are discovered via entry points
# Third-party plugins register here: plugin_name = "package.module:PluginClass"

[tool.hatch.build.targets.wheel]
packages = ["mother"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line length handled by formatter

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
# Gradually enable strict mode as code matures
# strict = true

[[tool.mypy.overrides]]
module = [
    "mother.tools.*",
    "mother.parsers.*",
    "mother.credentials",
    "mother.agent.*",
    "mother.cli.*",
    "mother.memory.*",
    "mother.plugins.*",
    "mother.config.*",
    "mother.main",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
